--- a/index.html
+++ b/index.html
@@ -1,28 +1,102 @@
-Codar.
-Início Serviços Contato Login
-Alavanque seu negócio com um
-Website incrível
-Solicitar orçamento
-Domínio personalizado
-Hospedagem
-Site responsivo
-Redes sociais
-Chat online
-Blog integrado
-Nossa equipe está à disposição!
-Celular Ligamos pra você
-Já tive experiências com outras 4 empresas da área e a Codar é sem sombra de dúvidas superior em todos os aspectos.
-Pedro Ferreira Construtora Minari
-Processos bem simples e criação de um site exatamente como a minha escola queria!
-Maria Rita
-Escola Criança Feliz
-Codar.
-Criamos websites incríveis
-Sobre
-Amamos criar soluções
-e entregar sites incríveis
-Contato
-123 Av. Manjar - Nárnia
-+55 96 2321-3131
-contato@codar.com
-Redes sociais
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Codar</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="grid.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="">
+    <header class="container header">
+      <h1 class="title">Codar<span>.</span></h1>
+      <ul class="menu">
+        <li>Início</li>
+        <li>Serviços</li>
+        <li>Contato</li>
+        <li>Login</li>
+      </ul>
+    </header>
+
+    <section class="container call-text">
+      <div class="imagem">
+        <img src="./assets/video_call.png" alt="" srcset="" />
+      </div>
+      <div>
+        <p class="desc-call">Alavanque seu negócio com um</p>
+        <h1 class="title-call">Website incrível</h1>
+        <a class="button-call">Solicitar orçamento</a>
+      </div>
+    </section>
+
+    <section class="container coding-text">
+      <ul>
+        <li>Domínio personalizado</li>
+        <li>Hospedagem</li>
+        <li>Site responsivo</li>
+        <li>Redes sociais</li>
+        <li>Chat online</li>
+        <li>Blog integrado</li>
+      </ul>
+      <div class="imagem-coding">
+        <img src="./assets/coding_.png" alt="" srcset="" />
+      </div>
+    </section>
+
+    <section class="container">
+      <p class="celular-desc">Nossa equipe está à disposição!</p>
+      <div class="input-button">
+        <input type="number" placeholder="Celular" />
+        <p>Ligamos pra você</p>
+      </div>
+    </section>
+
+    <section class="container comentarios">
+      <div class="comentario">
+        <div class="bola-vermelha">
+          <img src="./assets/ball.png" alt="" srcset="">
+        </div>
+        <div>
+          <p class="text-comentario">
+            Já tive experiências com outras 4 empresas<br />da área e a Codar é sem sombra de dúvidas<br />superior em todos os aspectos.
+          </p>
+          <p class="nome-comentario">Pedro Ferreira</p>
+          <p class="local-comentario">Construtora Minari</p>
+        </div>
+      </div>
+      <div class="comentario">
+        <div class="bola-vermelha">
+          <img src="./assets/ball.png" alt="" srcset="">
+        </div>
+        <div>
+          <p class="text-comentario">
+            Processos bem simples e criação de um<br />site exatamente como a minha escola<br />queria!
+          </p>
+          <p class="nome-comentario">Maria Rita</p>
+          <p class="local-comentario">Escola Criança Feliz</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="rodape">
+      <footer class="container">
+        <div class="grid-12 titles">
+          <h2 class="grid-3 title-footer">Codar.</h2>
+          <h2 class="grid-3">Sobre</h2>
+          <h2 class="grid-3">Contato</h2>
+          <h2 class="grid-3">Redes sociais</h2> 
+        </div>
+        <div class="grid-12 descricoes">
+          <p class="grid-3">Criamos websites incríveis</p>
+          <p class="grid-3">Amamos criar soluções<br />e entregar sites incríveis</p>
+          <ul class="grid-3">
+            <li>123 Av. Manjar - Nárnia</p></li>
+            <li>+55 96 2321-3131</li>
+            <li>contato@codar.com</li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </body>
+</html>
