--- a/index.html
+++ b/index.html
@@ -94,17 +94,24 @@
         </div>
         <div>
           <h2 class="titulo-footer">Sobre</h2>
-          <h3>Amamos criar soluções<br />e entregar sites incríveis</h3>
+          <h3 class="descricao">
+            Amamos criar soluções<br />e entregar sites incríveis
+          </h3>
         </div>
         <div>
           <h2 class="titulo-footer">Contato</h2>
-          <ul>
-            <li>123 Av. Manjar - Nárnia</li>
-            <li>+55 96 2321-3131</li>
-            <li>contato@codar.com</li>
-          </ul>
+          <p class="descricao item-contato">123 Av. Manjar - Nárnia</p>
+          <p class="descricao item-contato">+55 96 2321-3131</p>
+          <p class="descricao item-contato">contato@codar.com</p>
         </div>
-        <div><h2 class="titulo-footer">Redes sociais</h2></div>
+        <div>
+          <h2 class="titulo-footer">Redes sociais</h2>
+          <div class="icons-footer">
+            <div><img src="./assets/face.png" alt="" /></div>
+            <div><img src="./assets/insta.png" alt="" /></div>
+            <div><img src="./assets/tt.png" alt="" /></div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
