--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
   </head>
+  <!-- como é um site estatico decidi colocar no surge, pelo link: dev-challenge-codar-victormaya.surge.sh -->
   <body>
     <header class="container">
       <div>
